fix: corrects issue with spacing on strategy and design page for capabilities section

--- a/src/capabilities/design/design.scss
+++ b/src/capabilities/design/design.scss
@@ -12,4 +12,8 @@
   &.bottom-gutter {
     padding-bottom: 150px;
   }
+
+  .design-capabilities {
+    margin-top: 80px;
+  }
 }
