--- a/src/capabilities/strategy/strategy.scss
+++ b/src/capabilities/strategy/strategy.scss
@@ -13,4 +13,8 @@
   &.bottom-gutter {
     padding-bottom: 150px;
   }
+
+  .strategy-capabilities {
+    margin-top: 80px;
+  }
 }
